force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Case/Case.object-meta.xml
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>