force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Case/fields/Test_sample_custom_field__c.field-meta.xml
<CustomField>
    <fullName>Test_sample_custom_field__c</fullName>
    <label>Test sample custom field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>